@startuml
class meals.MealJpaController {
- EntityManagerFactory emf
+ EntityManager getEntityManager()
+ void create(Meal)
+ void edit(Meal)
+ void destroy(Integer)
+ List<Meal> findMealEntities()
+ List<Meal> findMealEntities(int,int)
- List<Meal> findMealEntities(boolean,int,int)
+ Meal findMeal(Integer)
+ int getMealCount()
+ List<Meal> getMealsOrderedByViews()
}
class view.StatisticForm {
- DefaultTableModel model
~ EntityManagerFactory emf
~ EntityManager em
~ EntityTransaction tx
~ MealJpaController mealController
- javax.swing.JButton jButton1
- javax.swing.JButton jButton2
- javax.swing.JLabel jLabel1
- javax.swing.JScrollPane jScrollPane2
- javax.swing.JTable jTable2
- void initComponents()
- void jButton1ActionPerformed(java.awt.event.ActionEvent)
- void jButton2ActionPerformed(java.awt.event.ActionEvent)
}
class model.Meal_ {
+ {static} SingularAttribute<Meal,String> mealcategory
+ {static} SingularAttribute<Meal,Integer> mealid
+ {static} SingularAttribute<Meal,Integer> mealcounter
+ {static} SingularAttribute<Meal,String> mealinstructions
+ {static} SingularAttribute<Meal,String> mealcountry
+ {static} SingularAttribute<Meal,String> mealname
}
class view.MainForm {
- javax.swing.JButton jButton1
- javax.swing.JButton jButton2
- javax.swing.JButton jButton3
- javax.swing.JButton jButton5
- void initComponents()
- void jButton1ActionPerformed(java.awt.event.ActionEvent)
- void jButton2ActionPerformed(java.awt.event.ActionEvent)
- void jButton5ActionPerformed(java.awt.event.ActionEvent)
- void jButton3ActionPerformed(java.awt.event.ActionEvent)
}
class meals.exceptions.NonexistentEntityException {
}
class meals.exceptions.PreexistingEntityException {
}
class meals.exceptions.IllegalOrphanException {
- List<String> messages
+ List<String> getMessages()
}
class meals.APIData {
}
class view.MealsForm {
~ EntityManagerFactory emf
~ EntityManager em
~ EntityTransaction tx
~ MealJpaController mealController
- javax.swing.JButton jButton1
- javax.swing.JButton jButton2
- javax.swing.JButton jButton3
- javax.swing.JButton jButton4
- javax.swing.JButton jButton5
- javax.swing.JButton jButton6
- javax.swing.JButton jButton7
- javax.swing.JComboBox<String> jComboBox1
- javax.swing.JComboBox<String> jComboBox2
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JLabel jLabel4
- javax.swing.JLabel jLabel5
- javax.swing.JLabel jLabel6
- javax.swing.JLabel jLabel7
- javax.swing.JLabel jLabel8
- javax.swing.JLabel jLabel9
- javax.swing.JList<String> jList1
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JScrollPane jScrollPane2
- javax.swing.JTextArea jTextArea1
- javax.swing.JTextField jTextField1
- javax.swing.JTextField jTextField2
- javax.swing.JTextField jTextField3
- javax.swing.JTextField jTextField4
- javax.swing.JTextField jTextField5
- void initComponents()
- void jButton4ActionPerformed(java.awt.event.ActionEvent)
- void jTextField4ActionPerformed(java.awt.event.ActionEvent)
- void jButton1ActionPerformed(java.awt.event.ActionEvent)
- void jButton2ActionPerformed(java.awt.event.ActionEvent)
- void jButton3ActionPerformed(java.awt.event.ActionEvent)
- void jTextField2ActionPerformed(java.awt.event.ActionEvent)
- void jButton5ActionPerformed(java.awt.event.ActionEvent)
- void jButton7ActionPerformed(java.awt.event.ActionEvent)
- void jButton6ActionPerformed(java.awt.event.ActionEvent)
- void showCategory()
}
class view.InfoForm {
- javax.swing.JButton jButton1
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JTextArea jTextArea1
- void initComponents()
- void jButton1ActionPerformed(java.awt.event.ActionEvent)
- void allText()
}
class meals.DatabaseCreat {
+ {static} String connectionString
+ {static} void createTable(String)
+ {static} void CreateDatabaseTables()
}
class model.Meal {
- {static} long serialVersionUID
- Integer mealid
- String mealname
- String mealcategory
- String mealcountry
- String mealinstructions
- int mealcounter
+ Integer getMealid()
+ void setMealid(Integer)
+ String getMealname()
+ void setMealname(String)
+ String getMealcategory()
+ void setMealcategory(String)
+ String getMealcountry()
+ void setMealcountry(String)
+ String getMealinstructions()
+ void setMealinstructions(String)
+ int getMealcounter()
+ void setMealcounter(int)
+ void addMealCounter()
+ int hashCode()
+ boolean equals(Object)
+ String toString()
}
class meals.Meals {
+ {static} void main(String[])
}


java.io.Serializable <|.. meals.MealJpaController
view.JFrame <|-- view.StatisticForm
javax.swing.JFrame <|-- view.MainForm
meals.exceptions.Exception <|-- meals.exceptions.NonexistentEntityException
meals.exceptions.Exception <|-- meals.exceptions.PreexistingEntityException
meals.exceptions.Exception <|-- meals.exceptions.IllegalOrphanException
view.JFrame <|-- view.MealsForm
view.JFrame <|-- view.InfoForm
java.io.Serializable <|.. model.Meal
@enduml